--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,7 +88,7 @@ body {
 }
 
 body {
-  padding: 1rem;
+  /* padding: 1rem; */
   overflow: hidden;
   overscroll-behavior: none;  /* 防止滚动链接/弹性效果 */
   touch-action: none;         /* 防止移动端的触摸滚动 */
@@ -96,4 +96,9 @@ body {
   position: fixed;            /* 可选：完全固定位置 */
   width: 100%;
   height: 100%;
+}
+.truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
